objects/Application_Interest_Rate_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Application Interest Rate Assignment</relationshipLabel>
        <relationshipName>Application_Interest_Rate_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Rating_Product_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Product Junction</label>
        <referenceTo>Credit_Rating_Product_Junction__c</referenceTo>
        <relationshipLabel>Application Interest Rate Assignment</relationshipLabel>
        <relationshipName>Application_Interest_Rate_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Matrix_Value__c</fullName>
        <label>Interest Rate Matrix Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Interest Rate Assignment</label>
    <nameField>
        <displayFormat>AIR-{0000000000}</displayFormat>
        <label>Application Interest Rate Assignment Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Interest Rate Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>